<resources>
    <string name="app_name">WordleGame Mobil Odev</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello">Hello</string>
    <string name="start">Start</string>
    <string name="button">Button</string>
    <string name="last_game">Last Game</string>
    <string name="high_score">High Score</string>
    <string name="high_scoreE">HIGH SCORE</string>
    <string name="level_1">Level -1</string>
    <string name="exit">EXIT</string>
    <string name="t">T</string>
    <string name="email">Email</string>
    <string name="ad">Ad</string>
    <string name="ifre">Şifre</string>
    <string name="kay_t_ol_ya_da_giri">Kayıt ol ya da Giriş</string>
    <string name="giri">Giriş</string>
    <string name="kaydol">Kaydol</string>
    <string name="todo">TODO</string>
    <string name="kaydol1">Kaydol</string>
    <string name="cikis">Çıkış</string>
    <string name="skor_tablosu">Skor Tablosu</string>
    <string name="ho_geld_n">HOŞGELDİN</string>
    <string name="yeni_oyuna_ba_la">yeni oyuna Başla</string>
    <string name="devam_et">devam et</string>
    <string name="yeni_oyuna_ba_la1">yeni oyuna Başla</string>
    <string name="devam_et1">devam et</string>
    <string name="ho_geld_n1">HOŞGELDİN</string>
    <string name="skor_tablosu1">Skor Tablosu</string>
    <string name="k">Çıkış</string>
    <string name="d">D</string>
    <string name="send">Send</string>
    <string name="ho_geldiniz">Hoşgeldiniz</string>
    <string name="noktalar">...</string>
    <string name="score">Score :</string>
    <string name="name">Name :</string>
    <string name="time">Time :</string>
    <string name="level_11">Level 1</string>
    <string name="level_22">Level 2</string>
    <string name="level_32">Level 3</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
</resources>